src/test/compile-fail/extfmt-unterminated-conv.rs
// error-pattern:unterminated conversion

fn main() {
  #fmt("%");
}
